<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="ok">OK</string>
    <string name="select">Select</string>

    <string name="current_capture">Current capture</string>
    <string name="subhead_photo">Photo</string>
    <string name="subhead_text">Text</string>
    <string name="save">Save capture</string>
    <string name="share_text">Share text</string>
    <string name="share_photo">Share photo</string>

    <string name="saved">Capture saved</string>
    <string name="no_data">No captures saved</string>
    <string name="delete">%1$d captures deleted</string>
    <string name="undo">Undo</string>

    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="error_low_storage">OCR dependencies cannot be downloaded due to low device storage</string>
    <string name="error_no_detection">Please wait until the camera detects text.</string>

    <string name="ocr_header">Click &quot;Detect Text&quot; to detect text</string>
    <string name="read_text">Detect Text</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="ocr_success">Text read successfully</string>
    <string name="ocr_failure">No text captured</string>
    <string name="ocr_error">"Error reading text: %1$s"</string>
</resources>
