<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_save_capture"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/save"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_share"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/share_text"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/action_share_text"
                android:title="@string/share_text" />
            <item
                android:id="@+id/action_share_photo"
                android:title="@string/share_photo" />
        </menu>
    </item>
</menu>