<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"

    tools:context="com.gjdevera.ocrreader.CaptureActivity">

    <TextView
        android:id="@+id/subhead_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/subhead_padding"
        android:paddingBottom="@dimen/subhead_padding"
        android:labelFor="@id/editText"
        android:text="@string/subhead_photo"
        android:textColor="@android:color/secondary_text_dark"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:contentDescription="@string/current_capture" />

    <TextView
        android:id="@+id/subhead_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/subhead_padding"
        android:paddingBottom="@dimen/subhead_padding"
        android:labelFor="@id/editText"
        android:text="@string/subhead_text"
        android:textColor="@android:color/secondary_text_dark"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7">

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:backgroundTint="@android:color/transparent"
            android:ems="10"
            android:inputType="textMultiLine" />
    </ScrollView>

</LinearLayout>
